sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:9: error: not found: value n
    for(i <- 0 to n-2) {
                  ^AlgCocktailSort1:16: error: not found: value n
    for(i <- n-2 to 0){
             ^AlgCocktailSort1:18: error: not found: value j
        swap(j, j+1);
             ^AlgCocktailSort1:18: error: not found: value j
        swap(j, j+1);
                ^